--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
-    background:url(images/vocal.jpg);
+    background:url(images/vocals.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
